home/cloud-providers/gcp/task-025-managing-traffic-with-anthos-service-mesh/manifests/virtualService-2-or-1-second-delay-to-calls-to-ratings-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
    - fault:
        delay:
          percent: 100
          fixedDelay: 1s
      route:
        - destination:
            host: ratings
            subset: v1
