home/cloud-providers/gcp/task-025-managing-traffic-with-anthos-service-mesh/manifests/virtualservice--half-second-timeout-for-calls-to-reviews.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
        - destination:
            host: reviews
            subset: v2
      timeout: 0.5s
