home/cloud-providers/gcp/task-025-managing-traffic-with-anthos-service-mesh/manifests/virtualservice--reviews-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
        - destination:
            host: reviews
            subset: v3
