home/cloud-providers/gcp/task-025-managing-traffic-with-anthos-service-mesh/manifests/virtualservice-reviews-50-v3-and-50-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
        - destination:
            host: reviews
            subset: v1
          weight: 50
        - destination:
            host: reviews
            subset: v3
          weight: 50
